3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Add an 'empty' command, that puts all contents of a (or all) container either
on ground or in player's opened container.
 include/sproto.h
 lib/Makefile.am
 server/c_object.c commands.c
Added file:
 lib/help/empty
Nicolas Weeger 2007-09-09

Server support for Metaserver2 - brought back from trunk:
acinclude.m4: Add LIBCURL_CHECK_CONFIG macro, used by configure.
configure.ac: Add check for pthread, LIBCURL.  Extra
  logic to display if we will build with metaserver2 support
lib/Makefile.am: add metaserver2 to list of files to install.
*/Makefile.in: rebuilt
lib/metaserver2: Settings file for metaserver2 support.
server/init.c: Add call to metaserver2_init() during startup.
include/metaserver2.h: Header file include metaserver2 related data.
include/autoconf.h.in: Rebuilt
include/sockproto.h: Rebuilt with new metaserver2 functions.
socket/metaserver.c: metaserver2 update logic added.
MSW 2007-08-31

Fix mistake in check logic, preventing from building connected items.
 server/build_map.c
Nicolas Weeger 2007-08-23

Fix bug #1779574: can destroy outer walls in lone town apartment, level 2.
 server/build_map.c: fix can_build_over(), add missing check.
Nicolas Weeger 2007-08-23

lib/help/{fire,fire_stop}: Add help for "fire" and "fire_stop" commands.
Andreas Kirschbaum 2007-08-22

Remove duplicate void esrv_update_item() that breaks make from top of server
on fresh autogen.sh && make.
 test/unit/common/stubs_common.c
Kevin Bulgrien 2007-08-21

Don't display an evil error message when trying to reset a map with a player on.
 server/c_wiz.c
Nicolas Weeger 2007-08-20
