@@ -39,7 +39,7 @@ helpdir=$(pkgdatadir)/help
 dist_help_DATA = help/apply help/applymode \
 	help/bind help/bowmode help/brace \
 	help/cast help/drop help/dropall \
-	help/empty \
+	help/empty help/explore \
 	help/fire help/fire_stop \
 	help/golem help/invoke \
 	help/keys help/killpets \
